--- a/placement_services.html
+++ b/placement_services.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/title_logo.png" type="image/x-icon">
     <title>Modern College of Pharmacy</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/common.css" rel="stylesheet" type="text/css">
@@ -134,32 +135,17 @@
         </div>
     </header>
     
-    <div class="container-2">
-        <div class="content">
-            <center><h2>PRINCIPAL'S MESSAGE</h2></center>
-            <p>
-                We are thrilled to extend a warm welcome to all visitors to our website, where the boundaries of learning extend beyond the physical realm and the possibilities are as vast as the digital horizon.The Pharmaceutical Science is a rapidly growing field in India. New technology is emerging globally every day in this field, leading to an increasing demand for highly qualified professionals and trained pharmacists to meet the needs of pharmaceutical industries, hospitals, and communities. 
-            </p>
-            <p>
-                We at Modern College of Pharmacy are committed to provide modern infrastructure supported by highly qualified, dedicated core teaching faculty to impart high quality education and research to our students so as to produce the next generation of pharmacists. The institute provides all the advanced instruments, lush green campus, best teachers and researchers who are working round the clock for student welfare and care. 
-            </p>
-            <p>
-                Come and join us to experience the true joy of learning and be a part of our institute.
-            </p>
+    <div class="text-container">
 
-        </div>
-        <div class="content">
-            <figure>
-                <img src="images/principal_fullimg.jpg"> </img>  
+        <h1>PLACEMENT & SERVICES</h1>
+
+        <div class="container-2">
+            <figure >
+                <img src="images/coming_soon.jpg">
             </figure>
-            <div class="name">
-                <h4>Dr. ISHAB KUMAR</h4>
-                <h3>(Director-Cum-Principal)</h3>
-            </div>
-            
         </div>
     </div>
- 
+
     <footer>
         <div class="ftr-container">
             <div class="ftr-content">
