--- a/pharmacy_practice_lab.html
+++ b/pharmacy_practice_lab.html
@@ -104,7 +104,7 @@
                     <li class="item-3"><a href="#">ACADEMICS</a>
                         <ul>
                             <li><a href="our_courses.html">OUR COURSES</a></li>
-                            <li><a href="workshops_seminars.html"> WORKSHOPS & SEMINARS</a></li>
+                            <li><a href="educational_events.html">EDUCATIONAL EVENTS</a></li>
     
                         </ul>
                     </li>
@@ -120,6 +120,7 @@
                         <ul>
                             <li><a href="scope_after_b.pharm.html"> SCOPE AFTER B.PHARM</a></li>
                             <li><a href="scope_after_d.pharm.html"> SCOPE AFTER D.PHARM</a></li>
+                            <li><a href="placement_services.html"> PLACEMENT SERVICES</a></li>
                         </ul>
     
                     </li>
