--- a/educational_events.html
+++ b/educational_events.html
@@ -97,7 +97,7 @@
                             <li><a href="about_us.html">ABOUT COLLEGE</a></li>
                             <li><a href="vision_mission.html"> VISION & MISSION</a></li>
                             <li><a href="founder_msg.html"> FOUNDER CHAIRMAN'S MESSAGE</a></li>
-                            <li><a href="chairperson_msg.html"> CHAIRMAN'S MESSAGE</a></li>
+                            <li><a href="chairman_msg.html"> CHAIRMAN'S MESSAGE</a></li>
                             <li><a href="director_msg.html"> MANAGING DIRECTOR'S MESSAGE</a></li>
                             <li><a href="principal_msg.html"> PRINCIPAL'S MESSAGE</a></li>
                         </ul>
@@ -135,12 +135,15 @@
             </div>
         </div>
     </header>
-    <div class="container-2">
+    <div class="text-container">
 
-        <figure >
-            <img src="images/coming_soon.jpg">
-        </figure>
+        <h1>EDUCATIONAL EVENTS</h1>
 
+        <div class="container-2">
+            <figure >
+                <img src="images/coming_soon.jpg">
+            </figure>
+        </div>
     </div>
 
     <footer>
