--- a/about_us.html
+++ b/about_us.html
@@ -137,10 +137,20 @@
     <div class="container-2">
         <div class="content">
             <heading><h2>ABOUT COLLEGE</h2></heading>
-            <p>We provides students with quality education and trained them to become leaders and innovators in the Pharmacy profession. The College laboratories are highly equipped with sophisticated instruments. The faculty resources and best infrastructure available at the institute are utilized very efficiently and effectively enabling students to have an edge over others for immediate employment. Further, a team of qualified and well-trained faculties is committed to student success. All efforts are made to enhance student performance and lay emphasis on quality education practices.
+            <p>
+                Welcome to Modern College of Pharmacy, a premier institute located in the vicinity of the historical city of Jhansi, Uttar Pradesh. Established in 2019, Modern College of Pharmacy is committed to providing high-quality education and training in the field of pharmaceutical sciences.
+                Modern College of Pharmacy prides itself on fostering a dynamic learning environment that encourages innovation, critical thinking, and professional development. Our dedicated faculty members, who are experts in their respective fields, are committed to providing students with a comprehensive education that prepares them for successful careers in pharmacy and beyond.
             </p>
-            <p>The campus is an inspirational place to study, where students are encouraged and supported to reach their highest possible potential through the rich curriculum designed to suit their aspirations and strengths. We maintain a high standard of education and continuously strive to create a conducive environment for learning in order to promote great career. We believe in the process of reshaping the attitude of students and giving them the opportunity to explore and rediscover themselves.
+            <p>
+                Located in the picturesque area of Kochhabhawar on Kanpur Road, our campus provides a conducive environment for academic and personal growth. With modern classrooms, well-equipped laboratories, a library with a vast collection of resources, and recreational facilities, we ensure that students have access to all the resources they need to succeed
             </p>
+            <p>
+                We are deeply committed to academic excellence, integrity, and community engagement. Our graduates are equipped with the knowledge, skills, and ethical values necessary to become leaders in the field of pharmacy and make meaningful contributions to society.
+            </p>
+            <p>
+                Join us at Modern College of Pharmacy, where innovation meets excellence, and embark on a transformative journey towards a fulfilling career in pharmacy.
+            </p>
+
         </div>
         <div class="content">
                 <figure> <img src="images/building.png"> </img> </figure>
