--- a/admission.html
+++ b/admission.html
@@ -234,7 +234,7 @@
                             Candidate must have passed 10+2 examination conducted by the respective state/central government authorities recognized as equivalent to 10+2 examination by the Association of Indian Universities (AIU) with English as one of the subjects and Physics, Chemistry, Mathematics (P.C.M) and or Biology (P.C.B / P.C.M.B.) as optional subjects individually.
                         </p>
                         <p>
-                            Candidate must have passed 10+2 examination conducted by the respective state/central government authorities recognized as equivalent to 10+2 examination by the Association of Indian Universities (AIU) with English as one of the subjects and Physics, Chemistry, Mathematics (P.C.M) and or Biology (P.C.B / P.C.M.B.) as optional subjects individually.
+                            Candidate must have attained the age of 17 years as on 31.12.2024
                         </p>
                 </tr>
                 <tr style="height:30.25pt;">
