--- a/biotech_lab.html
+++ b/biotech_lab.html
@@ -153,7 +153,9 @@
     </div>
    
     <div class="space container-2">
-
+        <div class="show-big-container">
+            <img class="big-image" src="">
+        </div>
         <div class="inside-container gallery">
            
             <div class="images">
