--- a/pharmaceutics_lab.html
+++ b/pharmaceutics_lab.html
@@ -158,7 +158,9 @@
     </div>
    
     <div class="space container-2">
-               
+        <div class="show-big-container">
+            <img class="big-image" src="">
+        </div>
         <div class="inside-container gallery">
            
             <div class="images">
