--- a/admission.html
+++ b/admission.html
@@ -136,18 +136,22 @@
     </header>
     <div class="text-container">
         <div class="heading">
-            <h1> Pharma College in Jhansi &ndash; Modern College of Pharmacy </h1>
+            <h1> Leading Pharmacy Institution in Jhansi - Modern College of Pharmacy </h1>
         </div>
 
         <p >
-            Are you looking for the &nbsp;<strong>Best Pharmacy College in Jhansi</strong>&nbsp;to study pharmacy and seek the best career for it? Don&rsquo;t worry, this exists in jhansi the best college for students with a love for pharmacy.
+            Are you looking for the &nbsp;<strong>Perfect Launching Pad</strong>&nbsp;for your pharmaceutical career in Jhansi?
         </p>
         <p >
-            As one of the best colleges, Modern College of Pharmacy offers systematic career development programs that empower the profession with knowledgeable and skilled pharmacists to match the rapidly changing health care setting. All this makes us proud of the state-of-the-art infrastructure, faculty with extensive experience in the field and an industry-oriented approach that allows our students to receive one of the best education and practical training.
+            Your search ends here at Modern College of Pharmacy, where the alchemy of innovation and education catalyzes the transformation of dreams into tangible achievements. In our halls, passion is the compass guiding students towards a future brimming with possibilities. 
         </p>
         <p >
-            Modern College of Pharmacy needs no stand-in words. We know that the choice of college significantly influences the successful completion of studies. This is the main reason we are here to create an engaging learning space where scholars prosper, innovate, and achieve their full potential, a path to professional success. We place great significance on research and practical simulators owing to the fact that they provide students with the knowledge and experience that are required to undertake any work they encounter in their careers.
+            At Modern College of Pharmacy, we believe in nurturing not just students but future leaders in the field of pharmacy. Our comprehensive career development programs and practical training modules prepare students to thrive in the ever-evolving healthcare landscape.
         </p>
+        <p >
+            Join us at Modern College of Pharmacy and let us guide you towards a rewarding and successful career in pharmacy. Your aspirations are our priority, and we are here to support you every step of the way.
+        </p>
+
 
         <table class="item-center" cellspacing="0" cellpadding="0">
             <tbody>
@@ -239,7 +243,7 @@
                 </tr>
                 <tr style="height:30.25pt;">
                     <td class="item-center table-data">
-                        B. PHARM- LATERAL ENTRY
+                        B.PHARM (LATERAL ENTRY)
                     </td>
                     <td class="table-data">
                         <p>
