--- a/about_us.html
+++ b/about_us.html
@@ -138,11 +138,10 @@
         <div class="content">
             <heading><h2>ABOUT COLLEGE</h2></heading>
             <p>
-                Welcome to Modern College of Pharmacy, a premier institute located in the vicinity of the historical city of Jhansi, Uttar Pradesh. Established in 2019, Modern College of Pharmacy is committed to providing high-quality education and training in the field of pharmaceutical sciences.
-                Modern College of Pharmacy prides itself on fostering a dynamic learning environment that encourages innovation, critical thinking, and professional development. Our dedicated faculty members, who are experts in their respective fields, are committed to providing students with a comprehensive education that prepares them for successful careers in pharmacy and beyond.
+                Welcome to Modern College of Pharmacy, a premier institute located in the vicinity of Jhansi city in Uttar Pradesh. Established in 2019, Modern College of Pharmacy is committed to providing high-quality education and training in the field of pharmaceutical sciences.Modern College of Pharmacy prides itself on fostering a dynamic learning environment that encourages innovation, critical thinking, and professional development. Our dedicated faculty members, who are experts in their respective fields, are committed to providing students with a comprehensive education that prepares them for successful careers in pharmacy and beyond.
             </p>
             <p>
-                Located in the picturesque area of Kochhabhawar on Kanpur Road, our campus provides a conducive environment for academic and personal growth. With modern classrooms, well-equipped laboratories, a library with a vast collection of resources, and recreational facilities, we ensure that students have access to all the resources they need to succeed
+                Located in the picturesque area of Kochhabhawar on Kanpur Road, our campus provides a conducive environment for academic and personal growth. With modern classrooms, well-equipped laboratories, a library with a vast collection of resources, and recreational facilities, we ensure that students have access to all the resources they need to succeed.
             </p>
             <p>
                 We are deeply committed to academic excellence, integrity, and community engagement. Our graduates are equipped with the knowledge, skills, and ethical values necessary to become leaders in the field of pharmacy and make meaningful contributions to society.
