--- a/director_msg.html
+++ b/director_msg.html
@@ -156,7 +156,7 @@
                     <img src="images/director_fullimg.jpg"> </img> 
                 </figure>
                 <div class="name">
-                    <h4>Mr. APOORV SHUKLA</h4>
+                    <h4>Mr. Apoorv Shukla/h4>
                     <h3>(MANAGING DIRECTOR)</h3>
                 </div>
         </div>
