--- a/founder_msg.html
+++ b/founder_msg.html
@@ -157,7 +157,7 @@
             </figure>
             <div class="name">
             <h4>Capt. Arvind Vishwanathan</h4>
-            <h3>(Founder Chairman)</h3>
+            <h3>(FOUNDER CHAIRMAN)</h3>
             </div>
         </div>
     </div>
