--- a/principal_msg.html
+++ b/principal_msg.html
@@ -153,8 +153,8 @@
                 <img src="images/principal_fullimg.jpg"> </img>  
             </figure>
             <div class="name">
-                <h4>Dr. ISHAB KUMAR</h4>
-                <h3>(Director-Cum-Principal)</h3>
+                <h4>Dr. Ishab Kumar</h4>
+                <h3>(DIRECTOR-CUM-PRINCIPAL)</h3>
             </div>
             
         </div>
