--- a/about_us.html
+++ b/about_us.html
@@ -152,7 +152,7 @@
 
         </div>
         <div class="content">
-                <figure> <img src="images/building.png"> </img> </figure>
+                <figure> <img src="images/building.jpg"> </img> </figure>
         </div>
     </div>
 
