--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="form-container">
                     
                 <div class="cancel"><i class="fa-sharp fa-solid fa-xmark"></i></div>
-                <form onsubmit="emailSend(); reset(); return false;" class="enqry-form">
+                <form onsubmit="emailSend(); reset(); return false;" class="enqry-form" method="POST">
                     <h1>ENQUIRY-FORM</h1>
                     <div class="error-msg" style="display: none;"></div>
                     
