--- a/contact.html
+++ b/contact.html
@@ -263,6 +263,11 @@
 
     
     </footer>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
+	<script src="email.js"></script>
+
     <script src="js/script.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
