--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         <div class="slick-slider-2 ">
             <div class="items"><img src="images/achievement/ach-1.jpg"></img></div>
             <div class="items"><img src="images/achievement/ach-2.jpg"></img></div>
+            <div class="items"><img src="images/achievement/ach-7.jpg"></img></div>
             <div class="items"><img src="images/achievement/ach-5.jpg"></img></div>
             <div class="items"><img src="images/achievement/ach-3.jpg"></img></div>
             <div class="items"><img src="images/achievement/ach-6.jpg"></img></div>
