--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="https://www.instagram.com/moderngrpof_pharmacy?igsh=MXI0NXlyZW1rN2Z4Mw==" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="#" target="">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
                     <a href="https://youtube.com/@ModernCollegeofPharmacyJhansi?si=W8zUJ_VWWJC_0nKU" target="_blank">
@@ -155,7 +155,7 @@
             </a>
         </div>
         <div class="elem">
-            <a href="#" target="_blank">
+            <a href="" target="">
                 <i class="fa-brands fa-twitter"></i>
             </a>
         </div>
