--- a/admission.html
+++ b/admission.html
@@ -215,7 +215,7 @@
         </table>
 
         <p>
-            <strong>Note:</strong>All courses will be regulated as per the guidelines of PCI, New Delhi.
+            <strong>Note:- </strong>All courses will be regulated as per the guidelines of PCI, New Delhi.
         </p>
         <br/>
 
