--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
         <div class="column">
             <div class="card card-color-2">
-                <h1 class="card-title">EXPERIENCED EDUCATORS </h1>
+                <h1 class="card-title">EMINENT FACULTY </h1>
             </div>
         </div>
         <div class="column">
@@ -217,7 +217,7 @@
             <p>"People who feel good about themselves produce good results and people who produce good results
                 feel good about themselves."</p>
 
-            <button id="more"><a href="chairperson_msg.html">Know More</a></button>
+            <button id="more"><a href="chairman_msg.html">Know More</a></button>
 
         </div>
         <div class="testimonial">
@@ -280,8 +280,6 @@
                 <ul>
                     <p> Address:Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
                     <p> Office Contact: 9889094094</p>
-                    <p> Mail ID:</p>
-                    <p>moderncollegeofpharmacyjhansi@gmail.com</p>
                 </ul>
             </div>
             <div class="brk-line"></div>
