--- a/founder_msg.html
+++ b/founder_msg.html
@@ -168,8 +168,6 @@
                 <ul>
                     <p> Address:Kochabhawar, Kanpur Road, Jhansi, Uttar Pradesh 284128 </p>
                     <p> Office Contact: 9889094094</p>
-                    <p> Mail ID:</p>
-                    <p>moderncollegeofpharmacyjhansi@gmail.com</p>
                 </ul>
             </div>
             <div class="brk-line"></div>
@@ -177,9 +175,7 @@
                 <h2><i class="fa-solid fa-phone"></i>CONTACT US</h2>
                 <ul>
                     <p> For Students Helpdesk: 7348550088</p>
-                    <p> Other Enquiry
-                        And Help Desk
-                        7318027770
+                    <p> For Other Enquiries: 7318027770
                     </p>
 
                     <div class="elem">
