--- a/index.html
+++ b/index.html
@@ -324,8 +324,7 @@
 
         <div class="copyright">
             <p>© 2024. All Rights Reserved by, Modern College of Pharmacy, Jhansi
-                Maintained by: Franciscan Solutions Pvt. Ltd.<a title="Reach to Er. Harry for Website Creation!"
-                    href="https://api.whatsapp.com/send?phone=7525037054">(Er.harry)</a></p>
+                Maintained by: <a href="https://www.franciscansolutions.com/" target="_blank"> Solutions Pvt. Ltd.</a></p>
         </div>
 
     
