--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 
         <div class="copyright">
             <p>© 2024. All Rights Reserved by, Modern College of Pharmacy, Jhansi
-                Maintained by: <a href="https://www.franciscansolutions.com/" target="_blank"> Solutions Pvt. Ltd.</a></p>
+                Maintained by: <a href="https://www.franciscansolutions.com/" target="_blank"> Franciscan Solutions Pvt. Ltd.</a></p>
         </div>
 
     
